--- a/app/src/main/res/layout/thema_ergebnis.xml
+++ b/app/src/main/res/layout/thema_ergebnis.xml
@@ -42,6 +42,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@id/TextThemaErgebnis" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
