--- a/app/src/main/res/layout/stufe4_online.xml
+++ b/app/src/main/res/layout/stufe4_online.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Erfahrung mit Kultur"
+        android:text="@string/culture"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:gravity="center"
-        android:text="Nun ist eure efahrung mit der Kultur gefragt. Ihr habt nun etwas Zeit, um Geschichten zu Kultur zuerzählen. Diese werden dann im Anschluss von eurem Mitspieler bewertet.  "
+        android:text="@string/culture_introduction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -43,7 +43,7 @@
         android:id="@+id/buttonStufe4Online"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="@string/continue_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
