--- a/app/src/main/res/layout/thema_ergebnis.xml
+++ b/app/src/main/res/layout/thema_ergebnis.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Hier steht das Thema"
+        android:text="@string/topic"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
-        android:text="Nun bekommt ihr ein offensichtliches und mögliches Problem . Du musst dir eine Lösung zu dieser Situation überlegen und in die Eingabefläche tippen, die im später Schritt erscheint."
+        android:text="@string/problem"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,8 +37,7 @@
         android:id="@+id/buttonThema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onclick"
-        android:text="Weiter"
+        android:text="@string/continue_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
