--- a/app/src/main/res/layout/bewertung_offline.xml
+++ b/app/src/main/res/layout/bewertung_offline.xml
@@ -14,9 +14,10 @@
         android:progressTint="#FDD835"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.712" />
 
     <TextView
         android:id="@+id/textViewBewertungErklärung"
@@ -26,8 +27,10 @@
         android:text="Nun werden die beiden Lösungen vorgestellt und du kann eine Punktevergabe von 1-5 Punktenvornehmen. Durch die Chattingoption könnt iht miteinander chatten und erhalten so die Möglichkeit sich über die Lösungen auszutauschen. Es werden nur ganze Sterne Vergeben."
         app:layout_constraintBottom_toTopOf="@+id/ratingBewertung"
         app:layout_constraintEnd_toEndOf="@+id/ratingBewertung"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ratingBewertung"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.59" />
 
     <Button
         android:id="@+id/WeiterButtonBewertung1"
@@ -36,6 +39,17 @@
         android:text="Weiter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBewertung" />
+        app:layout_constraintTop_toBottomOf="@+id/ratingBewertung"
+        app:layout_constraintVertical_bias="0.541" />
+
+    <TextView
+        android:id="@+id/playerToRate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/textViewBewertungErklärung"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
