fixing bugs and implementation of I joined activity for game with snapshotlistiner (not finished)

--- a/app/src/main/res/layout/bewertung_online.xml
+++ b/app/src/main/res/layout/bewertung_online.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:gravity="center"
-        android:text="Nun werden die beiden Lösungen vorgestellt und du kann eine Punktevergabe von 1-5 Punktenvornehmen. Durch die Chattingoption könnt iht miteinander chatten und erhalten so die Möglichkeit sich über die Lösungen auszutauschen. Es werden nur ganze Sterne Vergeben."
+        android:text="@string/intorduction_text_rating"
         app:layout_constraintEnd_toEndOf="@+id/ratingBewertung"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ratingBewertung"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="96dp"
-        android:text="Lösung anfragen"
+        android:text="@string/request_answer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:gravity="center"
-        android:text="Noch hat dein Mitspieler keine Lösung eingegeben"
+        android:text="@string/no_answer"
         app:layout_constraintEnd_toEndOf="@+id/textViewBewertungErklärung"
         app:layout_constraintStart_toStartOf="@+id/textViewBewertungErklärung"
         app:layout_constraintTop_toBottomOf="@+id/textViewBewertungErklärung" />
