--- a/app/src/main/res/layout/warten_auf_mitspieler.xml
+++ b/app/src/main/res/layout/warten_auf_mitspieler.xml
@@ -5,16 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/buttonWeiterMitspielerWarten"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:text="Weiter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/textView12"
         android:layout_width="0dp"
@@ -22,9 +12,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:gravity="center"
-        android:text="Es sieht so aus als wäre dein Mitspieler noch nicht bereit.  Wenn dieser bereit ist clicke auf Weiter"
+        android:text="@string/explain_to_wait"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonWeiterMitspielerWarten"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
