cleared code in xml files, updated quiz in Board, updated question choosing mechanism (not fninished)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/ic_launcher_background"
         android:backgroundTint="#862C333C"
-        android:text="Start"
+        android:text="@string/start"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#791E786B"
         android:textColorLink="#19CC8D"
@@ -28,7 +28,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Willkommen bei KH2 Spielt"
+        android:text="@string/welcome"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textSize="24sp"
