--- a/app/src/main/res/layout/bewertung_offline.xml
+++ b/app/src/main/res/layout/bewertung_offline.xml
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Nun werden die beiden Lösungen vorgestellt und du kann eine Punktevergabe von 1-5 Punktenvornehmen. Durch die Chattingoption könnt iht miteinander chatten und erhalten so die Möglichkeit sich über die Lösungen auszutauschen. Es werden nur ganze Sterne Vergeben."
+        android:text="@string/intorduction_text_rating"
         app:layout_constraintBottom_toTopOf="@+id/ratingBewertung"
         app:layout_constraintEnd_toEndOf="@+id/ratingBewertung"
         app:layout_constraintHorizontal_bias="0.0"
@@ -36,7 +36,7 @@
         android:id="@+id/WeiterButtonBewertung"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weiter"
+        android:text="@string/continue_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
