--- a/app/src/main/res/layout/popout_kein_thema_gewaehlt.xml
+++ b/app/src/main/res/layout/popout_kein_thema_gewaehlt.xml
@@ -27,10 +27,10 @@
                 android:id="@+id/popoutTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28dp"
+                android:textSize="28sp"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:text="Keine Veranstaltung gewählt" />
+                android:text="@string/no_topic" />
 
             <TextView
                 android:id="@+id/popoutText"
@@ -38,15 +38,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="Du musst mindestens eine Veranstaltung wählen um spielen zu können"
-                android:textSize="24dp" />
+                android:text="@string/no_topic_explained"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/popoutButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Ok" />
+                android:text="@string/ok" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
