--- a/app/src/main/res/layout/quiz_offline.xml
+++ b/app/src/main/res/layout/quiz_offline.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="weiter"
+        android:text="@string/continue_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -33,7 +33,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Antwort 3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonAnswer2Offline" />
@@ -43,7 +42,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Antwort 2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonAnswer1Offline" />
@@ -52,7 +50,6 @@
             android:id="@+id/buttonAnswer1Offline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Antwort 1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +60,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Antwort4"
             app:layout_constraintEnd_toEndOf="@+id/buttonAnswer3Offline"
             app:layout_constraintStart_toStartOf="@+id/buttonAnswer3Offline"
             app:layout_constraintTop_toBottomOf="@+id/buttonAnswer3Offline" />
@@ -76,7 +72,6 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="64dp"
-        android:text="Hier Steht eine Frage, der Text ist nur länger um das zu Simulieren?"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
