--- a/app/src/main/res/layout/quiz_online.xml
+++ b/app/src/main/res/layout/quiz_online.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="weiter"
+        android:text="@string/continue_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -32,9 +32,6 @@
             android:id="@+id/buttonAnswer4Online"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Antwort 4"
-            android:textOff="Antwort 4"
-            android:textOn="Antwort 4"
             app:layout_constraintEnd_toEndOf="@+id/buttonAnswer3Online"
             app:layout_constraintStart_toStartOf="@+id/buttonAnswer3Online"
             app:layout_constraintTop_toBottomOf="@+id/buttonAnswer3Online" />
@@ -43,9 +40,6 @@
             android:id="@+id/buttonAnswer3Online"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Antwort 3"
-            android:textOff="Antwort 3"
-            android:textOn="Antwort 3"
             app:layout_constraintEnd_toEndOf="@+id/buttonAnswer2Online"
             app:layout_constraintStart_toStartOf="@+id/buttonAnswer2Online"
             app:layout_constraintTop_toBottomOf="@+id/buttonAnswer2Online" />
@@ -54,9 +48,6 @@
             android:id="@+id/buttonAnswer2Online"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Antwort 2"
-            android:textOff="Antwort 2"
-            android:textOn="Antwort 2"
             app:layout_constraintEnd_toEndOf="@+id/buttonAnswer1Online"
             app:layout_constraintStart_toStartOf="@+id/buttonAnswer1Online"
             app:layout_constraintTop_toBottomOf="@+id/buttonAnswer1Online" />
@@ -65,9 +56,6 @@
             android:id="@+id/buttonAnswer1Online"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Antwort 1"
-            android:textOff="Antwort 1"
-            android:textOn="Antwort 1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +69,6 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="64dp"
-        android:text="Hier Steht eine Frage, der Text ist nur länger um das zu Simulieren?"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
