--- a/app/src/main/res/layout/veranstaltungswahl.xml
+++ b/app/src/main/res/layout/veranstaltungswahl.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Lesung"
+        android:text="@string/lesung"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Konzert"
+        android:text="@string/konzert"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkLesung"
         app:layout_constraintTop_toBottomOf="@+id/checkLesung" />
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Performance"
+        android:text="@string/performance"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkKonzert"
         app:layout_constraintTop_toBottomOf="@+id/checkKonzert" />
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Ausstellung"
+        android:text="@string/ausstellung"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkPerformance"
         app:layout_constraintTop_toBottomOf="@+id/checkPerformance" />
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Theater"
+        android:text="@string/theater"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkAusstellung"
         app:layout_constraintTop_toBottomOf="@+id/checkAusstellung" />
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Oper"
+        android:text="@string/oper"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkTheater"
         app:layout_constraintTop_toBottomOf="@+id/checkTheater" />
@@ -76,7 +76,7 @@
         android:gravity="center"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:text="Wo kann man Kultur erleben?"
+        android:text="@string/culture_question"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -91,7 +91,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="64dp"
         android:gravity="center"
-        android:text="Wähle die Orte die du am meisten kennst oder magst"
+        android:text="@string/culture_places"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -104,8 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:onClick="onclick"
-        android:text="Weiter"
+        android:text="@string/continue_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -117,7 +116,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Spieler 1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
