--- a/app/src/main/res/layout/veranstaltungswahloffline.xml
+++ b/app/src/main/res/layout/veranstaltungswahloffline.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Lesung"
+        android:text="@string/lesung"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Konzert"
+        android:text="@string/konzert"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkLesung"
         app:layout_constraintTop_toBottomOf="@+id/checkLesung" />
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Performance"
+        android:text="@string/performance"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkKonzert"
         app:layout_constraintTop_toBottomOf="@+id/checkKonzert" />
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Ausstellung"
+        android:text="@string/ausstellung"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkPerformance"
         app:layout_constraintTop_toBottomOf="@+id/checkPerformance" />
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Theater"
+        android:text="@string/theater"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkAusstellung"
         app:layout_constraintTop_toBottomOf="@+id/checkAusstellung" />
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Oper"
+        android:text="@string/oper"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/checkTheater"
         app:layout_constraintTop_toBottomOf="@+id/checkTheater" />
@@ -77,7 +77,7 @@
         android:gravity="center"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:text="Wo kann man Kultur erleben?"
+        android:text="@string/culture_question"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -92,7 +92,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="64dp"
         android:gravity="center"
-        android:text="Wähle die Orte die du am meisten kennst oder magst"
+        android:text="@string/culture_places"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -106,8 +106,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="32dp"
-        android:onClick="onclick"
-        android:text="Weiter"
+        android:text="@string/continue_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
