--- a/app/src/main/res/layout/ereignisskarte.xml
+++ b/app/src/main/res/layout/ereignisskarte.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Hier ist eure Ereignis Karte"
+        android:text="@string/here_is_card"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:gravity="center"
-        android:text="Als nächstest müsst ihr euch beide eine Lösung zum Problem auf der Ereigniskarte überlegen und dem Gegenüber vorstellen. Wenn ihr dies gemacht habt clickt auf weiter."
+        android:text="@string/explain_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -44,7 +44,7 @@
         android:id="@+id/buttonWeiterEreigniskarte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weiter"
+        android:text="@string/continue_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Thema"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
