--- a/app/src/main/res/layout/player_config.xml
+++ b/app/src/main/res/layout/player_config.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:ems="10"
-        android:hint="Name Spieler 1"
+        android:hint="@string/name1"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Weiter"
+        android:text="@string/continue_text"
         android:foreground="?selectableItemBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -82,9 +82,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="ToggleButton"
-        android:textOff="Online"
-        android:textOn="Offline"
+        android:textOff="@string/online"
+        android:textOn="@string/offline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Name Spieler 2"
+        android:hint="@string/name2"
         android:visibility="invisible"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/textName1"
@@ -117,7 +116,7 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fortsetzen"
+        android:text="@string/continue_2"
         app:layout_constraintEnd_toEndOf="@+id/gespeicherteSpiele"
         app:layout_constraintStart_toStartOf="@+id/gespeicherteSpiele"
         app:layout_constraintTop_toBottomOf="@+id/gespeicherteSpiele" />
@@ -126,7 +125,7 @@
         android:id="@+id/textViewEinstellung"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Einstellung"
+        android:text="@string/settings"
         app:layout_constraintEnd_toEndOf="@+id/SettingsButton"
         app:layout_constraintStart_toStartOf="@+id/SettingsButton"
         app:layout_constraintTop_toBottomOf="@+id/SettingsButton" />
