small xml update

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,17 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1A5260"
+    android:background="@color/backgroundGray"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_launcher_background"
-        android:backgroundTint="#862C333C"
+        android:backgroundTint="@color/grey"
         android:text="@string/start"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#791E786B"
-        android:textColorLink="#19CC8D"
+        android:textSize="20sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +28,6 @@
         android:layout_height="wrap_content"
         android:text="@string/welcome"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
