--- a/app/src/main/res/layout/veranstaltungswahloffline.xml
+++ b/app/src/main/res/layout/veranstaltungswahloffline.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/wahl1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#29566E">
+    android:background="@color/grey">
 
     <CheckBox
         android:id="@+id/checkLesung"
@@ -100,6 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
+        android:backgroundTint="@color/grey"
         android:id="@+id/continueVeranstaltung"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
