--- a/app/src/main/res/layout/online_verbindung.xml
+++ b/app/src/main/res/layout/online_verbindung.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/backgroundGray"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,6 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextIDInput">
 
         <Button
+        android:backgroundTint="@color/grey"
             android:id="@+id/buttonCreateGame"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -49,6 +50,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
+        android:backgroundTint="@color/grey"
             android:id="@+id/buttonConnectGame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
