--- a/app/src/main/res/layout/popout_kein_thema_gewaehlt.xml
+++ b/app/src/main/res/layout/popout_kein_thema_gewaehlt.xml
@@ -42,6 +42,7 @@
                 android:textSize="24sp" />
 
             <Button
+                android:backgroundTint="@color/grey"
                 android:id="@+id/popoutButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
