--- a/app/src/main/res/layout/stufe4_offline.xml
+++ b/app/src/main/res/layout/stufe4_offline.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/backgroundGray"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,6 +40,7 @@
         app:srcCompat="@android:drawable/ic_menu_compass" />
 
     <Button
+        android:backgroundTint="@color/grey"
         android:id="@+id/buttonStufe4Offline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
