--- a/app/src/main/res/layout/thema_ergebnis.xml
+++ b/app/src/main/res/layout/thema_ergebnis.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/backgroundGray"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#19343C">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/TextThemaErgebnis"
@@ -34,6 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/TextThemaErgebnis" />
 
     <Button
+        android:backgroundTint="@color/grey"
         android:id="@+id/buttonThema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
