--- a/app/src/main/res/layout/veranstaltungswahl.xml
+++ b/app/src/main/res/layout/veranstaltungswahl.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/backgroundGray"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#29566E">
+    android:layout_height="match_parent">
 
     <CheckBox
         android:id="@+id/checkLesung"
@@ -99,6 +98,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewSpieler1online" />
 
     <Button
+        android:backgroundTint="@color/grey"
         android:id="@+id/continueVeranstaltung"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
