--- a/app/src/main/res/layout/zweite_etappe_online.xml
+++ b/app/src/main/res/layout/zweite_etappe_online.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/backgroundGray"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,6 +37,7 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <Button
+        android:backgroundTint="@color/grey"
         android:id="@+id/Weiter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
