--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FDD835</color>
+    <color name="grey">#63656C</color>
+    <color name="lightGrey">#767984</color>
+    <color name="backgroundGray">#28292E</color>
 </resources>
